--- a/src/Sass/abstracts/_colors.scss
+++ b/src/Sass/abstracts/_colors.scss
@@ -2,6 +2,7 @@ $orange: #DE751F;
 $yellow: #FFED4A;
 $blue: #2779BD;
 $gray-dark: #3D4852;
+$gray-medium: #606F7B;
 $gray: #B8C2CC; 
 $white: #fff;
 $transparent: rgba(0, 0, 0, 0);
