--- a/src/Sass/components/_navbar.scss
+++ b/src/Sass/components/_navbar.scss
@@ -4,16 +4,15 @@
   }
 
   &__inner {
-    margin-right: 2rem;
-    display: flex;
-    align-items: center;
   }
 
   &__items {
     display: flex;
-    flex: 1;
-    justify-content: space-between;
+    // flex: 1;
+    // justify-content: space-between;
     align-items: center;
+    padding: 0.5rem 0;
+    outline: 1px dotted red;
   }
 
 }
