--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -1,22 +1,28 @@
+.btn-row {
+  text-align: center;
+  padding: 2rem; }
+
+.loginCol {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  margin-top: 3rem; }
+
 .navbar__outer {
   background-color: #2779BD; }
 
-.navbar__inner {
-  margin-right: 2rem;
-  display: flex;
-  align-items: center; }
-
 .navbar__items {
   display: flex;
-  flex: 1;
-  justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  padding: 0.5rem 0;
+  outline: 1px dotted red; }
 
 .logo {
   padding: 0.1rem;
   display: flex;
   justify-content: center;
-  margin: 1rem 5vw; }
+  margin: 1rem 0; }
 
 .logo img {
   background-color: #fff;
@@ -39,3 +45,44 @@
     border-right: none; }
   .navbar__link-active {
     color: #DE751F; }
+
+.formbtn, .formbtn:visited, .formbtn:link {
+  padding: 1rem 7rem;
+  background-color: #DE751F;
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 999px;
+  transition: all 0.2s;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  text-shadow: 0 0.1rem 0.1rem #3D4852; }
+
+.formbtn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem #B8C2CC;
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer; }
+
+.formbtn:active, .formbtn:focus {
+  outline: none;
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem #B8C2CC; }
+
+.form {
+  padding: 2rem;
+  margin: 1rem;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: #B8C2CC;
+  border-radius: 4px;
+  box-shadow: 0 0.3rem 0.6rem #B8C2CC;
+  width: 95%; }
+  .form__title {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+    font-weight: bold;
+    color: #606F7B; }
