create registration form, add registration form to login page

--- a/src/Sass/layout/_layout.scss
+++ b/src/Sass/layout/_layout.scss
@@ -3,10 +3,8 @@
   padding: 2rem;
 }
 
-.loginCol {
+.form-row {
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 50vh;
-  margin-top: 3rem;
 }
