--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -2,12 +2,10 @@
   text-align: center;
   padding: 2rem; }
 
-.loginCol {
+.form-row {
+  margin-top: 3rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50vh;
-  margin-top: 3rem; }
+  justify-content: center; }
 
 .navbar__outer {
   background-color: #2779BD; }
@@ -79,7 +77,7 @@
   border-color: #B8C2CC;
   border-radius: 4px;
   box-shadow: 0 0.3rem 0.6rem #B8C2CC;
-  width: 95%; }
+  width: 80%; }
   .form__title {
     text-align: center;
     text-transform: uppercase;
