create footer and add to login page

--- a/src/Sass/abstracts/_colors.scss
+++ b/src/Sass/abstracts/_colors.scss
@@ -1,8 +1,11 @@
 $orange: #DE751F;
 $yellow: #FFED4A;
 $blue: #2779BD;
+
 $gray-dark: #3D4852;
 $gray-medium: #606F7B;
 $gray: #B8C2CC; 
+$gray-light: #F1F5F8;
+
 $white: #fff;
 $transparent: rgba(0, 0, 0, 0);
