--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #F1F5F8; }
+
 .btn-row {
   text-align: center;
   padding: 2rem; }
@@ -70,17 +73,22 @@
   box-shadow: 0 0.5rem 1rem #B8C2CC; }
 
 .form {
-  padding: 2rem;
+  padding: 3rem;
   margin: 1rem;
   border-style: solid;
   border-width: 0.1rem;
   border-color: #B8C2CC;
   border-radius: 4px;
   box-shadow: 0 0.3rem 0.6rem #B8C2CC;
-  width: 80%; }
+  width: 60%;
+  background-color: #fff; }
   .form__title {
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 2rem;
     font-weight: bold;
     color: #606F7B; }
+
+.footer {
+  margin-top: 4rem;
+  text-align: center; }
