--- a/src/Sass/components/_navbar.scss
+++ b/src/Sass/components/_navbar.scss
@@ -1,18 +1,21 @@
 .navbar {
   &__outer {
     background-color: $blue;
+    height: 9rem;
   }
 
   &__inner {
+    height: 100%;
   }
 
   &__items {
     display: flex;
-    // flex: 1;
-    // justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 0;
-    outline: 1px dotted red;
+    padding: 3rem 0;
+    margin: auto;
+    position: relative;
+    height: 100%;
   }
 
 }
