--- a/src/Sass/base/_base.scss
+++ b/src/Sass/base/_base.scss
@@ -1,3 +1,14 @@
 body {
   background-color: $gray-light;
 }
+
+.page {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+}
