--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -1,5 +1,17 @@
+.text-center {
+  text-align: center; }
+
 body {
   background-color: #F1F5F8; }
+
+.page {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column; }
+
+.content {
+  flex: 1 0 auto; }
 
 .btn-row {
   text-align: center;
@@ -10,77 +22,18 @@ body {
   display: flex;
   justify-content: center; }
 
-.navbar__outer {
+.dashboard {
+  display: flex; }
+
+.db-side-panel {
   background-color: #2779BD;
-  height: 9rem; }
+  height: 100vh;
+  min-width: 25rem; }
 
-.navbar__inner {
-  height: 100%; }
-
-.navbar__items {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 3rem 0;
-  margin: auto;
-  position: relative;
-  height: 100%; }
-
-.logo {
-  padding: 0.1rem;
-  margin: 2rem 0;
-  position: absolute;
-  left: 0;
-  height: 100%; }
-
-.logo img {
-  background-color: #fff;
-  border-radius: 50%;
-  padding: 0.6rem;
-  margin-bottom: 2rem; }
-
-.navbar__link {
-  color: #FFED4A;
-  padding: 0 1.5rem;
-  border-right: 1px solid #B8C2CC; }
-  .navbar__links-box {
-    margin-right: 1rem;
-    position: absolute;
-    right: 0; }
-  .navbar__link:link, .navbar__link:visited {
-    text-decoration: none;
-    display: inline-block; }
-  .navbar__link:hover {
-    color: #DE751F; }
-  .navbar__link:last-child {
-    border-right: none; }
-  .navbar__link-active {
-    color: #DE751F; }
-
-.formbtn, .formbtn:visited, .formbtn:link {
-  padding: 1rem 7rem;
-  background-color: #DE751F;
-  color: #fff;
-  font-size: 2rem;
-  text-transform: uppercase;
-  border-radius: 999px;
-  transition: all 0.2s;
-  text-decoration: none;
-  outline: none;
-  border: none;
-  text-shadow: 0 0.1rem 0.1rem #3D4852; }
-
-.formbtn:hover {
-  transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem #B8C2CC;
-  text-decoration: none;
-  color: #fff;
-  cursor: pointer; }
-
-.formbtn:active, .formbtn:focus {
-  outline: none;
-  transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem #B8C2CC; }
+.footer {
+  margin-top: auto;
+  text-align: center;
+  flex-shrink: 0; }
 
 .form {
   padding: 3rem;
@@ -98,7 +51,88 @@ body {
     margin-bottom: 2rem;
     font-weight: bold;
     color: #606F7B; }
+  .form__link-para {
+    padding: 2rem; }
+  .form__link {
+    text-decoration: none;
+    font-weight: bold;
+    margin: 0 0.1rem; }
+    .form__link:link, .form__link:visited {
+      color: #2779BD; }
+    .form__link:hover, .form__link:active {
+      color: #DE751F;
+      text-decoration: none; }
 
-.footer {
-  margin-top: 4rem;
-  text-align: center; }
+.formbtn, .formbtn:visited, .formbtn:link {
+  padding: 1rem 7rem;
+  background-color: #DE751F;
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 999px;
+  transition: all 0.2s;
+  text-decoration: none;
+  border: none;
+  text-shadow: 0 0.1rem 0.1rem #3D4852; }
+
+.formbtn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem #B8C2CC;
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer; }
+
+.formbtn:active, .formbtn:focus {
+  outline: none;
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem #B8C2CC; }
+
+.formbtn__row {
+  padding: 2rem; }
+
+.logo {
+  padding: 0.1rem;
+  margin: 2rem 0;
+  position: absolute;
+  left: 0;
+  height: 100%; }
+
+.logo img {
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 0.6rem;
+  margin-bottom: 2rem; }
+
+.navbar__outer {
+  background-color: #2779BD;
+  height: 9rem; }
+
+.navbar__inner {
+  height: 100%; }
+
+.navbar__items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 0;
+  margin: auto;
+  position: relative;
+  height: 100%; }
+
+.navbar__link {
+  color: #FFED4A;
+  padding: 0 1.5rem;
+  border-right: 1px solid #B8C2CC; }
+  .navbar__links-box {
+    margin-right: 1rem;
+    position: absolute;
+    right: 0; }
+  .navbar__link:link, .navbar__link:visited {
+    text-decoration: none;
+    display: inline-block; }
+  .navbar__link:hover {
+    color: #DE751F; }
+  .navbar__link:last-child {
+    border-right: none; }
+  .navbar__link-active {
+    color: #DE751F !important; }
