--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -1,5 +1,6 @@
 // Abstracts
 @import './abstracts/_colors.scss';
+@import './abstracts/utilities.scss';
 
 // Base
 @import './base/_base.scss';
@@ -8,10 +9,12 @@
 @import './layout/_layout.scss';
 
 // Components
-@import './components/_test.scss';
-@import './components/_navbar.scss';
-@import './components/_logo.scss';
-@import './components/_navbar_links.scss';
-@import './components/_buttons.scss';
-@import './components/_form.scss';
+@import './components/_dashboard.scss';
+@import './components/_db-side-panel.scss';
 @import './components/_footer.scss';
+@import './components/_form.scss';
+@import './components/_formbtn.scss';
+@import './components/_logo.scss';
+@import './components/_navbar.scss';
+@import './components/_navbar_links.scss';
+@import './components/_test.scss';
