create branding row on side pannel

--- a/src/Sass/abstracts/_colors.scss
+++ b/src/Sass/abstracts/_colors.scss
@@ -1,4 +1,5 @@
 $orange: #DE751F;
+$orange-dark: #613B1F;
 $yellow: #FFED4A;
 $blue: #2779BD;
 
@@ -7,5 +8,6 @@ $gray-medium: #606F7B;
 $gray: #B8C2CC; 
 $gray-light: #F1F5F8;
 
+$black: #22292F;
 $white: #fff;
 $transparent: rgba(0, 0, 0, 0);
