--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -11,6 +11,7 @@
 // Components
 @import './components/_dashboard.scss';
 @import './components/_db-side-panel.scss';
+@import './components/_dbspbranding.scss';
 @import './components/_footer.scss';
 @import './components/_form.scss';
 @import './components/_formbtn.scss';
