--- a/src/Sass/components/_form.scss
+++ b/src/Sass/components/_form.scss
@@ -25,6 +25,7 @@
     text-decoration: none;
     font-weight: bold;
     margin: 0 0.1rem;
+    cursor: pointer;
 
     &:link, &:visited {
       color: $blue;
