--- a/src/Sass/components/_logo.scss
+++ b/src/Sass/components/_logo.scss
@@ -1,15 +1,12 @@
 .logo {
   padding: 0.1rem;
-  // width: 8rem;
-  margin: 2rem 0;
-  position: absolute;
-  left: 0;
-  height: 100%;
+  width: 5rem;
+  height: 5rem;
+  background-color: $white;
+  border-radius: 50%;
 }
 
 .logo img {
-  background-color: $white;
-  border-radius: 50%;
   padding: 0.6rem;
   margin-bottom: 2rem;
 }
