--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -28,7 +28,25 @@ body {
 .db-side-panel {
   background-color: #2779BD;
   height: 100vh;
-  min-width: 25rem; }
+  min-width: 25rem;
+  border-right: solid 0.15rem #613B1F; }
+
+.dbsp-branding {
+  height: 7rem;
+  background-color: #DE751F;
+  padding: 0.1rem;
+  display: flex;
+  justify-content: space-around;
+  border-bottom: solid 0.2rem #613B1F; }
+  .dbsp-branding__logo {
+    margin: 0.8rem;
+    width: 5rem;
+    height: 5rem; }
+  .dbsp-branding__text {
+    color: #fff;
+    font-weight: bold;
+    text-shadow: 0 0.1rem 0.2rem #22292F;
+    text-transform: uppercase; }
 
 .footer {
   margin-top: auto;
@@ -56,7 +74,8 @@ body {
   .form__link {
     text-decoration: none;
     font-weight: bold;
-    margin: 0 0.1rem; }
+    margin: 0 0.1rem;
+    cursor: pointer; }
     .form__link:link, .form__link:visited {
       color: #2779BD; }
     .form__link:hover, .form__link:active {
@@ -92,14 +111,12 @@ body {
 
 .logo {
   padding: 0.1rem;
-  margin: 2rem 0;
-  position: absolute;
-  left: 0;
-  height: 100%; }
+  width: 5rem;
+  height: 5rem;
+  background-color: #fff;
+  border-radius: 50%; }
 
 .logo img {
-  background-color: #fff;
-  border-radius: 50%;
   padding: 0.6rem;
   margin-bottom: 2rem; }
 
