reformat navbar, add navlinks with icons and text to the side panel navigation

--- a/src/Sass/abstracts/_colors.scss
+++ b/src/Sass/abstracts/_colors.scss
@@ -2,6 +2,7 @@ $orange: #DE751F;
 $orange-dark: #613B1F;
 $yellow: #FFED4A;
 $blue: #2779BD;
+$blue-dark: #1C3D5A;
 
 $gray-dark: #3D4852;
 $gray-medium: #606F7B;
