--- a/src/Sass/components/_db-side-panel.scss
+++ b/src/Sass/components/_db-side-panel.scss
@@ -1,6 +1,5 @@
 .db-side-panel {
-  background-color: $blue;
+  background-color: $blue-dark;
   height: 100vh;
   min-width: 25rem;
-  border-right: solid 0.15rem $orange-dark;
 }
