--- a/src/Sass/components/_navbar.scss
+++ b/src/Sass/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   &__outer {
-    background-color: $blue;
+    background-color: $blue-dark;
     height: 9rem;
   }
 
@@ -13,9 +13,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 3rem 0;
-    margin: auto;
-    position: relative;
     height: 100%;
+  }
+
+  &__item {
+    flex: 1;
   }
 
 }
