dashboard side panel footer

--- a/src/Sass/components/_dbspnavlink.scss
+++ b/src/Sass/components/_dbspnavlink.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   letter-spacing: 0.08rem;
+  color: $white;
 
   &:link, &:visited {
     text-decoration: none;
