--- a/src/Sass/components/_dbspbranding.scss
+++ b/src/Sass/components/_dbspbranding.scss
@@ -4,6 +4,7 @@
   padding: 0.1rem;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 
   &__logo {
     margin: 0.8rem;
@@ -16,5 +17,7 @@
     font-weight: bold;
     text-shadow: 0 0.1rem 0.2rem $black;
     text-transform: uppercase;
+    font-size: 2rem;
+    margin-right: 2rem;
   }
 }
