--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -12,8 +12,10 @@
 @import './components/_dashboard.scss';
 @import './components/_db-side-panel.scss';
 @import './components/_dbspbranding.scss';
+@import './components/_dbspfooter.scss';
 @import './components/_dbspmainnav.scss';
 @import './components/_dbspnavlink.scss';
+@import './components/_dbspnavdropdown.scss';
 @import './components/_footer.scss';
 @import './components/_form.scss';
 @import './components/_formbtn.scss';
