--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -53,21 +53,24 @@ body {
 .dbsp-footer {
   position: absolute;
   bottom: 0;
-  height: 6rem;
+  height: 6.2rem;
   width: 100%;
-  border-top: 0.02rem solid #DE751F; }
+  border-top: 0.02rem solid #DE751F;
+  display: flex;
+  align-items: center; }
   .dbsp-footer__help-box {
     background-color: #DE751F;
-    padding: 0.2rem 2rem;
-    text-align: center;
+    width: 8.2rem;
+    height: 3rem;
     border-radius: 999px;
     display: flex;
     align-items: center;
-    width: 40%;
+    justify-content: center;
     margin: 0.8rem 2rem;
     color: #fff; }
   .dbsp-footer__help-text {
-    margin-left: 0.5rem; }
+    margin-left: 0.6rem;
+    font-size: 1.7rem; }
 
 .dbsp-mainnav {
   padding: 3rem 1rem; }
