create view page, create calendar view with year, create months list, create drop down list for weeks in the month

--- a/src/Sass/components/_dashboard.scss
+++ b/src/Sass/components/_dashboard.scss
@@ -1,4 +1,10 @@
+// Classes for Top-Level Dashboard Pages
+
 .dashboard {
   display: flex;
-  
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: scroll;
 }
+
