--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -10,7 +10,10 @@
 
 // Components
 @import './components/_dashboard.scss';
-@import './components/_db-side-panel.scss';
+@import './components/_dbcontentpanel.scss';
+@import './components/_dbcpheader.scss';
+@import './components/_dbcplogcalendar.scss';
+@import './components/_dbsidepanel.scss';
 @import './components/_dbspbranding.scss';
 @import './components/_dbspfooter.scss';
 @import './components/_dbspmainnav.scss';
