create list of days for each week toggled on

--- a/src/Sass/components/_dbcplogcalendar.scss
+++ b/src/Sass/components/_dbcplogcalendar.scss
@@ -62,4 +62,15 @@
   &__days-text {
     display: inline-block;
   }
+
+  &__days-box {
+    display: flex;
+    flex-direction: row;
+    padding-left: 6rem;
+  }
+
+  &__day {
+    width: 7rem;
+    margin: 1rem;
+  }
 }
