create option buttons in the header

--- a/src/Sass/components/_dbcpheader.scss
+++ b/src/Sass/components/_dbcpheader.scss
@@ -1,11 +1,44 @@
 .dbcp-header {
   height: 8rem;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
   &__title {
     font-size: 5rem;
     color: $blue-dark;
     margin-left: 10rem; 
     text-transform: uppercase;
+    width: 30%;
+  }
+
+  &__opts {
+    &-btn {
+      transition: all 0.2s;
+      margin: 2rem 1.5rem;
+      border-radius: 999px;
+      padding: 0.5rem 1.5rem;
+      background-color: $orange;
+      color: $white;
+      font-size: 1.5rem;
+      border: none;
+      outline: none;
+
+      &:hover {
+        transform: translateY(-0.3rem);
+        box-shadow: 0 1rem 2rem $gray;
+        text-decoration: none;
+        color: $white;
+        cursor: pointer;
+      }
+    
+      &:active,
+      &:focus {
+        outline: none;
+        transform: translateY(-0.1rem);
+        box-shadow: 0 0.5rem 1rem $gray;
+      }
+    }
   }
 }
