--- a/src/Sass/components/_dbcplogcalendar.scss
+++ b/src/Sass/components/_dbcplogcalendar.scss
@@ -65,12 +65,12 @@
 
   &__days-box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding-left: 6rem;
   }
 
   &__day {
     width: 7rem;
-    margin: 1rem;
+    margin-left: 1rem;
   }
 }
