--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -22,6 +22,7 @@
 @import './components/_form.scss';
 @import './components/_formbtn.scss';
 @import './components/_logo.scss';
+@import './components/_logoptions.scss';
 @import './components/_navbar.scss';
 @import './components/_navbar_links.scss';
 @import './components/_test.scss';
