create single day view, add props for sending calednar data

--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -9,10 +9,13 @@
 @import './layout/_layout.scss';
 
 // Components
+@import './components/_buttons.scss';
+@import './components/_card.scss';
 @import './components/_dashboard.scss';
 @import './components/_dbcontentpanel.scss';
 @import './components/_dbcpheader.scss';
 @import './components/_dbcplogcalendar.scss';
+@import './components/_dbcpsingledayview.scss';
 @import './components/_dbsidepanel.scss';
 @import './components/_dbspbranding.scss';
 @import './components/_dbspfooter.scss';
@@ -20,7 +23,6 @@
 @import './components/_dbspnavlink.scss';
 @import './components/_footer.scss';
 @import './components/_form.scss';
-@import './components/_formbtn.scss';
 @import './components/_logo.scss';
 @import './components/_logoptions.scss';
 @import './components/_navbar.scss';
