--- a/src/Sass/components/_buttons.scss
+++ b/src/Sass/components/_buttons.scss
@@ -1,3 +1,23 @@
+.btn {
+  text-transform: uppercase;
+  transition: all 0.2s;
+  text-decoration: none;
+
+  &:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem $gray;
+    text-decoration: none;
+    color: $white;
+    cursor: pointer;
+  }
+
+  &:focus, &:active {
+    outline: none;
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem $gray;
+  }
+}
+
 .formbtn {
   &,
   &:visited,
@@ -33,4 +53,11 @@
     padding: 2rem;
   }
 
+}
+
+.pool-opt-btn {
+  background-color: $blue;
+  color: $white;
+  padding: 0.5rem 1rem;
+  margin: 1rem;
 }
