--- a/src/Sass/components/_dbcplogcalendar.scss
+++ b/src/Sass/components/_dbcplogcalendar.scss
@@ -67,10 +67,12 @@
     display: flex;
     flex-direction: column;
     padding-left: 6rem;
+    margin-bottom: 3rem;
   }
 
   &__day {
-    width: 7rem;
+    width: 18rem;
     margin-left: 1rem;
+    display: inline-block;
   }
 }
