--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -4,6 +4,9 @@
 .ml-2 {
   margin-left: 3rem; }
 
+.w60 {
+  width: 60%; }
+
 body {
   background-color: #F1F5F8; }
 
@@ -24,6 +27,64 @@ body {
   margin-top: 3rem;
   display: flex;
   justify-content: center; }
+
+.btn {
+  text-transform: uppercase;
+  transition: all 0.2s;
+  text-decoration: none; }
+  .btn:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem #B8C2CC;
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer; }
+  .btn:focus, .btn:active {
+    outline: none;
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem #B8C2CC; }
+
+.formbtn, .formbtn:visited, .formbtn:link {
+  padding: 1rem 7rem;
+  background-color: #DE751F;
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 999px;
+  transition: all 0.2s;
+  text-decoration: none;
+  border: none;
+  text-shadow: 0 0.1rem 0.1rem #3D4852; }
+
+.formbtn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem #B8C2CC;
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer; }
+
+.formbtn:active, .formbtn:focus {
+  outline: none;
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem #B8C2CC; }
+
+.formbtn__row {
+  padding: 2rem; }
+
+.pool-opt-btn {
+  background-color: #2779BD;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  margin: 1rem; }
+
+.card {
+  padding: 3rem;
+  margin: 1rem;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: #B8C2CC;
+  border-radius: 4px;
+  box-shadow: 0 0.3rem 0.6rem #B8C2CC;
+  background-color: #fff; }
 
 .dashboard {
   display: flex;
@@ -122,10 +183,22 @@ body {
   .dbcp-log-calendar__days-box {
     display: flex;
     flex-direction: column;
-    padding-left: 6rem; }
+    padding-left: 6rem;
+    margin-bottom: 3rem; }
   .dbcp-log-calendar__day {
-    width: 7rem;
-    margin-left: 1rem; }
+    width: 18rem;
+    margin-left: 1rem;
+    display: inline-block; }
+
+.dbcpsingle-day-view__btn-row {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 3rem; }
+
+.dbcpsingle-day-view__log-row {
+  display: flex;
+  justify-content: center;
+  margin: 3rem; }
 
 .db-side-panel {
   background-color: #1C3D5A;
@@ -230,33 +303,6 @@ body {
     .form__link:hover, .form__link:active {
       color: #DE751F;
       text-decoration: none; }
-
-.formbtn, .formbtn:visited, .formbtn:link {
-  padding: 1rem 7rem;
-  background-color: #DE751F;
-  color: #fff;
-  font-size: 2rem;
-  text-transform: uppercase;
-  border-radius: 999px;
-  transition: all 0.2s;
-  text-decoration: none;
-  border: none;
-  text-shadow: 0 0.1rem 0.1rem #3D4852; }
-
-.formbtn:hover {
-  transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem #B8C2CC;
-  text-decoration: none;
-  color: #fff;
-  cursor: pointer; }
-
-.formbtn:active, .formbtn:focus {
-  outline: none;
-  transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem #B8C2CC; }
-
-.formbtn__row {
-  padding: 2rem; }
 
 .logo {
   padding: 0.1rem;
