--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -11,6 +11,7 @@
 // Components
 @import './components/_buttons.scss';
 @import './components/_card.scss';
+@import './components/_completelogviewpanel.scss';
 @import './components/_dashboard.scss';
 @import './components/_dbcontentpanel.scss';
 @import './components/_dbcpheader.scss';
