--- a/src/Sass/components/_dbcontentpanel.scss
+++ b/src/Sass/components/_dbcontentpanel.scss
@@ -4,9 +4,10 @@
   // justify-content: center;
   // align-items: center;
   width: (75vw);
-  height: 100%;
+  height: 100vh;
   position: absolute;
   left: 25rem;
   top: 0;
   overflow: scroll;
+  padding-top: 3rem;
 }
